--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body {
 @media (orientation: landscape) {
   #root {
     grid-template-areas: 
-    "home location  user    user"
+    "home location  org    org"
     "layers   devices   devices devices"; 
     grid-template-columns: auto 1fr auto 1fr;
     grid-template-rows: auto 1fr;
@@ -49,7 +49,7 @@ body {
 @media (orientation: portrait) {
   #root {
     grid-template-areas: 
-    "home location user"
+    "home location org"
     "layers layers layers"
     "devices devices devices";
     grid-template-columns: .3fr .7fr 1fr;
