--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --background-color: #2e2e2e;
-  --text-color: #dedede;
+  --background-color: #2e2e3e;
+  --text-color: #dedeed;
 }
 
 body {
