--- a/src/components/devices/devices.css
+++ b/src/components/devices/devices.css
@@ -2,6 +2,9 @@
     grid-area: devices;
     width: 100%;
     height: 100%;
+    position: relative;
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 
 .device-icon{
